--- a/checkout/src/main/resources/application.yml
+++ b/checkout/src/main/resources/application.yml
@@ -19,19 +19,32 @@ spring:
         jdbc:
           lob:
             non_contextual_creation: true
-#  cloud:
-#    stream:
-#      kafka:
-#        binder:
-#          autoCreateTopics: false
-#          brokers: localhost:9892
-#          configuration:
-#            value:
-#              deserializer: io.confluent.kafka.serializers.kafkaAvroDeserializer
-#              serializer: io.confluent.kafka.serializers.kafkaAvroSerializer
-#            key:
-#              deserializer: io.confluent.kafka.serializers.kafkaAvroDeserializer
-#              serializer: io.confluent.kafka.serializers.kafkaAvroSerializer
+  cloud:
+    stream:
+      kafka:
+        binder:
+          autoCreateTopics: true
+          brokers: localhost:9892
+          configuration:
+            value:
+              deserializer: io.confluent.kafka.serializers.kafkaAvroDeserializer
+              serializer: io.confluent.kafka.serializers.kafkaAvroSerializer
+            key:
+              deserializer: io.confluent.kafka.serializers.kafkaAvroDeserializer
+              serializer: io.confluent.kafka.serializers.kafkaAvroSerializer
+      bindings:
+        checkout-created-output:
+          destination: streaming.ecommerce.checkout.created
+          contentType: application/*+avro
+          producer:
+            use-native-encoding: true
+        payment-paid-input:
+          destination: streaming.ecommerce.payment.paid
+          contentType: application/*+avro
+          group: ${spring.application.name}
+          consumer:
+            use-native-decoding: true
+
 
 
 
