adicionando o evento no projeto

--- a/checkout/docker/docker-compose.yml
+++ b/checkout/docker/docker-compose.yml
@@ -47,7 +47,7 @@ services:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOPEEKER_CONNECT: 172.20.0.10:2181
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://broker:29892,PLAINTEXT_HOST://localhost:9892
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
       KAFKA_METRIC_REPORTERS: io.confluent.metrics.reporter.ConfluentMetricsReporter
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTORY: 1
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
