--- a/checkout/docker/kafka/Dockerfile
+++ b/checkout/docker/kafka/Dockerfile
@@ -9,7 +9,7 @@ FROM confluentinc/cp-enterprise-kafka:latest AS kafka
 ENV KAFKA_BROKER_ID=1
 ENV KAFKA_ZOOKEEPER_CONNECT='172.20.0.10:2181'
 ENV KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-ENV KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://broker:29892,PLAINTEXT_HOST://localhost:9892
+ENV KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9092
 ENV KAFKA_METRIC_REPORTERS=io.confluent.metrics.reporter.ConfluentMetricsReporter
 ENV KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
 ENV KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS=0
